# probabilistic-robotics-course

./: .gitignore  CMakeLists.txt  README.md
MATLAB/KalmanFilter/: KalmanFilter.m  LinearStochasticModel.m  Simulation.m  runKalmanFilter.m
configuration/discrete_world/: DiscreteWorldConfiguration.json
configuration/discrete_world/movement/: simplemovement.json
configuration/discrete_world/sensors/: simplesensors.json
configuration/discrete_world/trajectories/: simpletrajectory.json
configuration/discrete_world/world/: simpleworld.json
scripts/install/: install_dependencies.sh
source/: CMakeLists.txt
source/core/: CMakeLists.txt
source/core/applications/: DiscreteWorld_main.cpp  DiscreteWorld_main.h
source/core/estimation/: DiscreteWorldEstimator.cpp  DiscreteWorldEstimator.h
source/core/gui/: DiscreteWorldGUI.cpp  DiscreteWorldGUI.h  DiscreteWorldGUI.ui  DiscreteWorldGui.cpp  DiscreteWorldGui.h
source/core/math/: DiscreteRandomSampler.cpp  DiscreteRandomSampler.h  Interpolator.h  LinearInterpolator.h  MVTools.h  MathUtils.h  Matrix.h  Matrix2x2.h  Matrix3x3.h  PhysicsConstants.h  Pose2.h  Pose2D.h  Pose3D.h  RotationMatrix.h  SplineInterpolator.h  Vector.h  Vector2.h  Vector3.h
source/core/representations/: DiscreteDistribution.h  DiscreteSensorData.cpp  DiscreteSensorData.h  DiscreteTrajectory.h  DiscreteWorldData.cpp  DiscreteWorldData.h  Position.cpp  Position.h  SensorData.cpp  SensorData.h  WorldModelData.cpp  WorldModelData.h
source/core/robot/: DifferentialRobot.cpp  DifferentialRobot.h  OmnidirectionalRobot.cpp  OmnidirectionalRobot.h  Robot.cpp  Robot.h
source/core/sensor/: DiscreteSensor.cpp  DiscreteSensor.h  Sensor.cpp  Sensor.h  SensorData.cpp  SensorData.h  SensorPosition.cpp  SensorPosition.h
source/core/utils/configuration/: DiscreteWorldConfigurationData.cpp  DiscreteWorldConfigurationData.h  DiscreteWorldConstants.h
source/core/utils/parser/: DiscreteWorldFileParser.cpp  DiscreteWorldFileParser.h
source/core/world/: GridWorld.cpp  GridWorld.h  World.cpp  World.h
source/tests/: CMakeLists.txt
source/tests/component/: CMakeLists.txt
source/tests/component/gui/: DiscreteWorldGUI_ComponentTest.cpp
source/tests/component/world/: GridWorld_ComponentTest.cpp
source/tests/unit/: AllTests.cpp  CMakeLists.txt
source/tests/unit/math/: DiscreteRandomSampler_UnitTest.cpp
source/tests/unit/representations/: DiscreteDistribution_UnitTest.cpp  Position_UnitTest.cpp  Position_UnitTest.h
source/tests/unit/robot/: DifferentialRobot_UnitTest.cpp  DifferentialRobot_UnitTest.h  OmnidirectionalRobot_UnitTest.cpp  OmnidirectionalRobot_UnitTest.h
source/tests/unit/sensor/: DiscreteSensor_UnitTest.cpp  DiscreteSensor_UnitTest.h  SensorPosition_UnitTest.cpp  SensorPosition_UnitTest.h
source/tests/unit/utils/parser/: DiscreteWorldFileParser_UnitTest.cpp  DiscreteWorldFileParser_UnitTest.h  simpleworldtest.json
source/tests/unit/world/: GridWorld_UnitTest.cpp  GridWorld_UnitTest.h
